--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,12 @@
+.img-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  min-width: 200px;
+  max-width: 300px;
+}
+
 .icon {
   height: 25px;
   width: auto;
